--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,11 @@
+<!doctype html>
 <html>
 
 <head>
+    <meta charset="utf-8">
+    <title>Simple Image Gallery</title>
+    <meta name="description" content="Google Search like image gallery built with jquery, requirejs and handlebarjs">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
     <!-- <link href="http://php01.dev.local:9090/frontend_dev/jet/css/site.css" rel="stylesheet">
